k8s_base/special/laptop/website/website.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
    service: website
  name: website
  namespace: website
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website
    version: v1
  name: website
  namespace: website
spec:
  selector:
    matchLabels:
      app: website
      version: v1
  template:
    metadata:
      labels:
        app: website
        version: v1
    spec:
      containers:
      - image: nginx:1.13.0-alpine
        imagePullPolicy: IfNotPresent
        name: website
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: nginx-html
          readOnly: true
        - mountPath: /var/log/nginx
          name: log
      volumes:
      - configMap:
          name: nginx-html
        name: nginx-html
      - emptyDir: {}
        name: log
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
  namespace: website
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - z01.yantao0527.me
    - leasing.z01.yantao0527.me
    - argocd.z01.yantao0527.me
    - kiali.z01.yantao0527.me
    - prometheus.z01.yantao0527.me
    - grafana.z01.yantao0527.me
    - tracing.z01.yantao0527.me
    port:
      name: http2
      number: 80
      protocol: HTTP2
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-gateway
  namespace: website
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - z01.yantao0527.me
    - leasing.z01.yantao0527.me
    - argocd.z01.yantao0527.me
    - kiali.z01.yantao0527.me
    - prometheus.z01.yantao0527.me
    - grafana.z01.yantao0527.me
    - tracing.z01.yantao0527.me
    port:
      name: https-tls
      number: 443
      protocol: HTTPS
    tls:
      credentialName: website-tls
      mode: SIMPLE
  - hosts:
    - dashboard.z01.yantao0527.me
    port:
      name: https-passthrough
      number: 443
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - argocd.z01.yantao0527.me
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
  namespace: website
spec:
  gateways:
  - https-gateway
  hosts:
  - dashboard.z01.yantao0527.me
  tls:
  - match:
    - port: 443
      sniHosts:
      - dashboard.z01.yantao0527.me
    route:
    - destination:
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - grafana.z01.yantao0527.me
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - kiali.z01.yantao0527.me
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leasing-web
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - leasing.z01.yantao0527.me
  http:
  - match:
    - uri:
        prefix: /api
    - uri:
        prefix: /admin/api
    - uri:
        prefix: /worker/api
    - uri:
        prefix: /dashboard/api
    rewrite:
      uri: /api
    route:
    - destination:
        host: leasing-server.leasing.svc.cluster.local
        port:
          number: 7001
  - match:
    - uri:
        prefix: /admin
    route:
    - destination:
        host: leasing-admin.leasing.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /worker
    route:
    - destination:
        host: leasing-worker.leasing.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /dashboard
    route:
    - destination:
        host: leasing-dashboard.leasing.svc.cluster.local
        port:
          number: 80
  - route:
    - destination:
        host: leasing-server.leasing.svc.cluster.local
        port:
          number: 7001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - prometheus.z01.yantao0527.me
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - tracing.z01.yantao0527.me
  http:
  - route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - z01.yantao0527.me
  http:
  - route:
    - destination:
        host: website.website.svc.cluster.local
        port:
          number: 80
